# urpo

./: .clippy.toml  .eslintrc.json  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONFIGURATION.md  Cargo.toml  EMPTY_TABS_SOLUTION.md  GITHUB_SSO_SETUP.md  ITERATION4_COMPLETE.md  ITERATION_8_SUMMARY.md  LICENSE  QUICK_START.md  README.md  SIMPLE_OAUTH_SETUP.md  TAURI_GUI_QUICKSTART.md  TEST_SUITE_DESIGN.md  URPO_CODEBASE_AUDIT.md  archive_integration  bench_reality_check.rs  build.sh  config.example.yaml  demo_config  demo_interface.sh  otel_sender.rs  package-lock.json  package.json  quick_test.sh  run.sh  rust-project.json  rustfmt.toml  send_multiple_traces.sh  send_quick_traces.sh  send_test_traces.sh  simple_otel_sender.rs  simple_sender  standalone_perf_demo.rs  tailwind.config.js  tauri.conf.json  (+6 more)
.claude/agents/: rust-grpc-storage-optimizer.md  rust-otel-systems-architect.md  urpo-product-manager.md  urpo-ui-ux-expert.md
.github/workflows/: ci.yml
benches/: compression_benchmark.rs  hot_path.rs  pool_performance.rs  span_processing.rs  storage_performance.rs  visual_performance.rs  zero_alloc_benchmark.rs
docs/: RUNNING_INSTRUCTIONS.md  STRUCTURE.md  api.md  query-language.md
docs/design/: metrics_design_session.md  metrics_logs_design.md  otel_load_generator_design.md
examples/: basic_usage.rs  config.example.yaml  config_example.rs  continuous_sender.rs  demo_config.rs  full_otlp_receiver.rs  otel_load.rs  performance_showcase.rs  send_http_traces.rs  send_otel_data.rs  send_otel_traces.rs  send_test_trace.rs  send_traces.py  smart_sampling_demo.rs
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  test.html  tsconfig.node.json  vite.config.ts
frontend/.claude/agents/: tauri-frontend-expert.md
frontend/src/: App.tsx  AppDebug.tsx  AppPro.tsx  ProgressiveApp.tsx  SimplestApp.tsx  TestApp.tsx  TestSimple.tsx  components-refined.tsx  components.tsx  index.css  main.tsx
frontend/src/components/: DeviceLogin.tsx  GitHubLogin.tsx  LoginModal.tsx  OAuthSettings.tsx  unified-layout.tsx
frontend/src/components/charts/: AdvancedTraceTimeline.tsx  GraphControls.tsx  MiniMapPro.tsx  RealTimeTraceFlow.tsx  ServiceDetailsPanel.tsx  ServiceGraph.tsx  (+3 more)
frontend/src/constants/: colors.ts  ui.ts
frontend/src/design-system/: core.css  core.tsx
frontend/src/hooks/: README.md  index.ts  useLocalStorage.ts  useRealtimeTraces.ts  useTauriData.ts
frontend/src/lib/: github-auth.ts  tauri.ts
frontend/src/pages/: LoginPage.tsx  unified-views.tsx
frontend/src/services/: mockData.ts
frontend/src/styles/: design-system.css  professional.css  sharp.css  unified-design.css
frontend/src/types/: index.ts
frontend/src/utils/: tauri.ts
scripts/: find_unwraps.sh  run_benchmarks.sh  standardize-components.js  test_http_receiver.sh  test_integration.sh  test_otel_receiver.sh
src/: App.tsx  application.rs  index.css  lib.rs  main.rs  main.tsx  main_gui.rs  monitoring.rs
src-tauri/: Cargo.toml  METRICS_LOGS_IMPLEMENTATION.md  tauri.conf.json
src-tauri/src/: auth.rs  commands.rs  device_auth.rs  main.rs  telemetry.rs  types.rs
src-tauri/src/auth/: commands.rs  mod.rs  oauth.rs  storage.rs
src-tauri/src/auth/providers/: github.rs  mod.rs
src/api/: mod.rs
src/cli/: mod.rs
src/components/: CommandPalette.tsx  FlowTable.tsx  InstantSearch.tsx  LiveServiceMap.tsx  MiniMapPro.tsx  ServiceDependencyGraph.tsx  ServiceGraph.tsx  ServiceHealthDashboard.tsx  ServiceMap.tsx  SpanDetailsView.tsx  SystemMetrics.tsx  TraceExplorer.tsx  TraceMinimap.tsx  VirtualizedTraceView.tsx
src/components/charts/: AdvancedTraceTimeline.tsx  LiveServiceMap.tsx  RealTimeTraceFlow.tsx  ServiceDependencyGraph.old.tsx  ServiceDependencyGraph.tsx  ServiceGraph.tsx  TraceMinimap.tsx  VirtualizedTraceView.tsx
src/components/modals/: InstantSearch.tsx
src/components/panels/: SystemMetrics.tsx
src/components/tables/: FlowTable.tsx  ServiceHealthDashboard.tsx  ServiceMap.tsx  TraceExplorer.tsx
src/components/ui/: BaseButton.tsx  BaseCard.tsx
src/constants/: colors.ts
src/core/: config.rs  diagnostics.rs  error.rs  mod.rs  otel_compliance.rs  retry.rs  string_intern.rs  types.rs
src/export/: mod.rs
src/hooks/: useDebounce.ts  useDependencyDiscovery.ts  useErrorHandler.ts  useKeyboardShortcuts.ts  usePolling.ts
src/logs/: mod.rs  storage.rs  types.rs
src/metrics/: aggregator.rs  integration_test.rs  mod.rs  ring_buffer.rs  storage.rs  string_pool.rs  types.rs
src/query/: ast.rs  executor.rs  mod.rs  parser.rs
src/receiver/: http.rs  logs.rs  metrics.rs  mod.rs
src/sampling/: adaptive.rs  budget.rs  mod.rs  pattern.rs  tail_based.rs
src/service_map/: mod.rs
src/services/: mockData.ts
src/storage/: aggregator.rs  archive.rs  archive_integration.rs  archive_manager.rs  async_archive.rs  async_archive_reader.rs  backend.rs  buffered.rs  cleanup_logic.rs  columnar.rs  compression.rs  degradation.rs  engine.rs  fake_spans.rs  health.rs  manager.rs  memory.rs  mod.rs  performance.rs  search.rs  simd_search.rs  simple_pool.rs  span_pool.rs  tiered_engine.rs  types.rs  ultra_compact_storage.rs  ultra_fast.rs  zero_alloc_pool.rs
src/tui/: dashboard.rs  fake_data.rs  keybindings.rs  logs_view.rs  mod.rs  service_health.rs  service_list.rs  settings.rs  span_details.rs  trace_list.rs  ultimate_tui.rs  ultra_fast_input.rs  ultra_fast_renderer.rs  widgets.rs
src/types/: index.ts
src/ui/: dashboard.rs  fake_data.rs  mod.rs  span_details.rs  widgets.rs
src/utils/: tauri.ts
src/utils/graph/: layouts.ts
test_receiver/: Cargo.toml
test_receiver/src/: main.rs
tests/: README.md  TEST_README.md  archive_integration.rs  config_test.rs  integration_test.rs.broken  memory_destroyer_test.rs  otelgen_stress_test.sh  otlp_integration.rs  performance_tests.rs  pool_performance_test.rs  reality_check_bench.rs  simple_reality_check.rs  storage_integration_test.rs  test_archive  test_archive_demo  test_archive_system.rs  trace_exploration_test.rs  ui_non_blocking_test.rs  verify_urpo_data.sh
tests/common/: mod.rs
(+22 files in other folders)
