[workspace]
members = ["src-tauri"]
resolver = "2"

[package]
name = "urpo_lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
description = "Terminal-native OTEL trace explorer with real-time service health"
repository = "https://github.com/user/urpo"
keywords = ["observability", "tracing", "opentelemetry", "terminal", "tui"]
categories = ["command-line-utilities", "development-tools::debugging"]

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "net", "sync", "time", "macros", "signal", "fs"] }

# OTEL and GRPC
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
opentelemetry = "0.26"
opentelemetry-proto = { version = "0.26", features = ["gen-tonic"] }

# HTTP Server for OTLP/HTTP
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
humantime-serde = "1.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Data structures
dashmap = "6.1"
arc-swap = "1.7"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.7"
rand = "0.8"
hex = "0.4"
async-trait = "0.1"
dirs = "5.0"
notify = "6.1"
regex = "1.10"

# EXTREME PERFORMANCE OPTIMIZATIONS - OTEL FOCUSED
roaring = "0.10"  # Compressed bitmaps for instant filtering
memmap2 = "0.9"  # Memory-mapped files for huge datasets
rayon = "1.10"  # Parallel processing
parking_lot = "0.12"  # Faster locks than std
ahash = "0.8"  # Faster hashing - MUCH faster than default
rkyv = { version = "0.7", features = ["validation", "archive_le"], optional = true }  # Zero-copy serialization
lz4 = "1.28"  # Fast compression for cold storage
rocksdb = { version = "0.22", optional = true }  # Optional persistent storage
crossbeam-channel = "0.5"  # Lock-free channels for trace ingestion
crossbeam = "0.8"  # Full crossbeam suite including ArrayQueue
speedy = "0.8"  # Even faster serialization than bincode
object-pool = "0.4"  # Object pooling for performance
once_cell = "1.19"  # Lazy static replacement

# Additional performance dependencies from CLAUDE.md
mimalloc = { version = "0.1", default-features = false }  # Ultra-fast allocator
rustc-hash = "2.0"  # Fast hashing
fastrand = "2.0"  # Fast random numbers
bumpalo = "3.0"  # Arena allocation


[dev-dependencies]
tempfile = "3.0"
wiremock = "0.6"
criterion = "0.5"
pretty_assertions = "1.4"
opentelemetry-otlp = { version = "0.26", features = ["tonic", "trace"] }
reqwest = { version = "0.11", features = ["json"] }
opentelemetry_sdk = { version = "0.26", features = ["rt-tokio"] }
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.12"

[features]
default = []
persistent = ["rocksdb"]
rkyv = ["dep:rkyv"]

[lib]
name = "urpo_lib"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "urpo"
path = "src/main.rs"

[[bench]]
name = "span_processing"
harness = false

[[bench]]
name = "hot_path"
harness = false

[profile.release]
lto = "fat"              # Full link-time optimization
codegen-units = 1        # Better optimization
panic = "abort"          # Smaller binary, faster panic
opt-level = 3            # Maximum optimization
debug = false            # No debug info in release
strip = true             # Strip symbols for smaller binary
overflow-checks = false  # Disable overflow checks for maximum speed

[profile.bench]
inherits = "release"
debug = true             # Keep debug info for profiling