[package]
name = "urpo-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urpo_lib = { path = ".." }

# OAuth and authentication dependencies
keyring = "2.3"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
warp = "0.3"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4"] }
urlencoding = "2.1"
open = "5.0"

# Ultra-fast allocator
mimalloc = { version = "0.1", default-features = false }

# High-performance dependencies for advanced optimizations
rayon = "1.10"  # Parallel processing across CPU cores
dashmap = "6.1"  # Lock-free concurrent hash maps
fastrand = "2.0"  # Fast random number generation
crossbeam = "0.8"  # Lock-free channels and data structures
bumpalo = "3.14"  # Arena allocation for temporary data
once_cell = "1.19"  # Global static initialization
sysinfo = "0.32"  # System resource monitoring
atomic_float = "1.1"  # Lock-free atomic float operations

[profile.release]
lto = "fat"              # Full link-time optimization
codegen-units = 1        # Better optimization  
panic = "abort"          # Smaller binary, faster panic
opt-level = 3            # Maximum optimization
debug = false            # No debug info in release
strip = true             # Strip symbols for smaller binary
overflow-checks = false  # Disable overflow checks for maximum speed

[profile.bench]
inherits = "release"
debug = true             # Keep debug info for profiling
